Implemented Spinner in BookEditActivity

--- a/app/src/main/res/layout/activity_book_edit.xml
+++ b/app/src/main/res/layout/activity_book_edit.xml
@@ -21,12 +21,10 @@
             android:textSize="30dp"
             android:layout_margin="10dp" />
 
-        <EditText
+        <Spinner
             android:id="@+id/bookCategory"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="category"
-            android:textSize="20dp"
             android:layout_margin="10dp" />
 
         <EditText
